
$Id: changes.txt,v 1.28 2005/07/25 17:48:50 vvd0 Exp $

----
MVDSV v0.18 build 2040 (2005.07.22)
- project cleaned up
[server]
- removed cvar sv_aim (by Disconnect)
- only set the client to cs_spawned state AFTER we've verfied his spawncount
(by Disconnect from ZQuake)
- don't send to zombies (by Disconnect from ZQuake)
[unix]
- bugfix from 0.179b: crashes while printing red text in some places
(Thanks to Oppy)


----
MVDSV v0.179 Beta DEVELOP build 2033 (2005.07.15)
[unix qwdtools]
- bugfix from 0.176: crashed - bug was in Makefile
(Thanks to Disconnect)
[server]
- new cvar sv_registrationinfo - text shown before "enter login" (RFE #1198104)
(by hdworak)
- new cvar sv_forcenick - if the player has logged in ('accounts' file),
  force his nick to match the login and forbid changing nickname (RFE #1198108)
  0 - don't force
  1 - as login
  default: 0
(by hdworak)
- bugfix: format string vulnerabilities (by droogie)
- new command modfraglogfile - turn on/off parsing mod messages for frags and logging in
  modfrag_N.log file with additional info (weapon and etc.) to create more detailed statistics
  (EXPERIMENTAL)
  (because we have no sources of ktpro :-()
(by kreon and VVD, idea by gLAd)
- qvm engine updated to version 7
(Thanks to SD-Angel)
- key *qvm was moved from serverinfo to localinfo
- new cvar sv_hashpasswords - keep hashed passwords in the 'accounts' file (RFE #1198101)
  0 - plain passwords
  1 - hashed passwords (sha1)
  default: 1
(by hdworak)
- bugfix: now, if the server can't write any more data to the log or demo (for example because
  of insufficient disk space), it will close the logfile and stop logging and cancel the
  recording of the current demo (bug #1057459)
- build: define REGEX, to use external regex lib for listing demos
  (for example: FreeBSD has regex functions in libc)
  otherwise use integrated part of PCRE 5.0 library - http://www.pcre.org/
(Thanks to BorisU)